# korrektor-rs

./: CODEOWNERS  Cargo.toml  README.md  readme.md
.github/workflows/: rust.yml  test.yml
src/: lib.rs
src/alphabetic_sort/: mod.rs
src/number/: mod.rs
src/remove_duplicates/: mod.rs
src/tokenize/: mod.rs
src/utils/: mod.rs
src/utils/duplicates/: mod.rs
src/utils/frequency/: mod.rs
src/uzbek/: mod.rs
src/uzbek/alphabetic/: mod.rs
src/uzbek/number/: constants.rs  mod.rs
src/uzbek/tokenize/: mod.rs
src/word_frequency/: mod.rs
