[package]
name = "korrektor"
version = "0.2.1"
edition = "2021"
homepage = "https://korrektor.uz"
repository = "https://github.com/uzinfocom-org/korrektor-rs"
description = "Library to work with Uzbek language text processing"
authors = [
    "Kate Crystal <crystalnyan@icloud.com> (https://kate.moe)",
    "Manuchehr Usmonov <yetimdasturchi@gmail.com> (https://manu.uno)",
    "UwUssimo Robinson <uwussimo@icloud.com> (https://uwussi.moe)"
]
keywords = ["uzbek", "language", "korrektor", "text-processing"]
readme = "readme.md"
categories = ["text-processing"]
license = "MIT OR Apache-2.0"
exclude = ["target", ".github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.0"
pcre = "0.2.3"
itertools = "0.10.5"